--- a/style.css
+++ b/style.css
@@ -1,57 +1,40 @@
 html {
-    font-family: sans-serif
+    font-family: 'Courier New', monospace;
+    color: white;
+    background-color: black;
 }
 
 h1 {
     text-align: center;
+    font-size: 350%;
 }
 
 button {
-    width: 10%;
+    width: 15%;
+    font-family: 'Courier New', monospace;
+    word-wrap:break-word;
     padding-top: 2%;
     padding-bottom: 2%;
     font-size: xx-large;
     text-align: center;
+    color: black;
+    background-color: white;
 }
 .button {
     text-align: center;
 }
 
-p {
-    font-size: large;
+.inventory {
+    float: right;
+    font-size: x-large;
     margin-left: 5%;
     text-align: right;
     margin-right: 5%
 }
 
-.dropbtn {
-    background-color: #000000;
-    color: white;
+.maintenance {
+    float: left;
     font-size: xx-large;
-  }
-  
-  .dropdown {
-    position: relative;
-    display:block
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 25%;
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 8% 12%;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  .dropdown:hover .dropbtn {background-color: #000000;}
+    text-align: left;
+    margin-left: 5%;
+}
