--- a/style.css
+++ b/style.css
@@ -58,3 +58,12 @@ button {
     width: 5%;
     height: 3%;
 }
+.upgrades {
+    margin: 3%;
+    font-size: large;
+}
+.multipliers {
+    margin-top:40ch;
+    margin-left: 5%;
+    justify-self: left;
+}
