--- a/style.css
+++ b/style.css
@@ -69,10 +69,10 @@ button {
 }
 
 .multipliers {
-    margin-top:30ch;
+    margin-top:15ch;
     margin-left: 5%;
     justify-self: left;
-    font-size: large;
+    font-size: xx-large;
 }
 
 .cost {
